Fixed Grammar and Re-Worded information
I fix the information

--- a/menu-list.html
+++ b/menu-list.html
@@ -108,7 +108,7 @@
         </section>
         <div style="width: 80%; margin-left: 10%;">
             <p>Recent graduate with a degree in Software Development with a growing passion in building software. Experience working in group projects and completing tasks quickly and efficiently. You can also download the Word Document of my Resume
-			<a href="Documents/Thyraellis Howard Resume.pdf">Here</a>
+			<a href="Documents/Thyraellis Howard.docx">Here</a>
 			</p>
         <hr/>
         </div>
@@ -137,7 +137,7 @@
                                 <div class="media-body">
                                     <a><h3>HTML</h3></a>
                                     <h4>Great</h4>
-                                    <p>In HTML I have coded out many structures for website that I have built with ASP.NET C#, PHP, JavaScript.</p>
+                                    <p>I use HTML for the basic structure for my websites when I am not using ASP .NET tags.</p>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <div class="media-body">
                                     <a><h3>CSS</h3></a>
                                     <h4>Great</h4>
-                                    <p>I mainly use CSS for my styling needs on websites.</p>
+                                    <p>CSS is the language I use to style my HTML into my graphic design layouts.</p>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                 <div class="media-body">
                                     <a><h3>JavaScript</h3></a>
                                     <h4>Good</h4>
-                                    <p>JavaScript is the first language that I made an AI in. As well as other functionalities on website.</p>
+                                    <p>JavaScript is the first language that I started making my first AI in. As well as set up other functionalities on my websites.</p>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                 <div class="media-body">
                                     <a><h3>Angular JS</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I tried making an ABC store website using Angular and it worked, but I still have a lot to learn about it. </p>
+                                    <p>I made a store website using Angular and it worked, but I still feel like I need to learn more about it. </p>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                 <div class="media-body">
                                     <a><h3>Knockout JS</h3></a>
                                     <h4>Ok</h4>
-                                    <p>During my internship at Think of Us I used knockout to do most of the databinding for their platform.</p>
+                                    <p>During my internship at Think of Us I used knockout.js to databind elements in their platform.</p>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                 <div class="media-body">
                                     <a><h3>C</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I C I have made a few cmd line games. THe first one was a randome number guessing game.</p>
+                                    <p>In C I have made a few command line games that were input and random number generated based.</p>
                                 </div>
                             </div>
                         </div>
@@ -209,8 +209,9 @@
                                 <div class="media-body">
                                     <a><h3>.NET C#</h3></a>
                                     <h4>Amazing</h4>
-                                    <p>In .net C# I have built games, websites, and AI's. In this language I also built Elias AMIS (Active Memory Information System)
-					my personal take on AI processing and user interaction.</p>
+                                    <p>In C# ASP.Net I have built games, websites, and most of my AIs and Elias Active Memory Information System
+					   (my personal take on AI processing and user interaction).
+					</p>
                                 </div>
                             </div>
                         </div>
@@ -222,7 +223,7 @@
                                 <div class="media-body">
                                     <a><h3>C++</h3></a>
                                     <h4>Good</h4>
-                                    <p>In C++ I have made a game that presents you with a quest using random generated numbers.</p>
+                                    <p>In C++ I made a more interactive user input game that utilizes string inputs and random generated numbers.</p>
                                 </div>
                             </div>
                         </div>
@@ -234,7 +235,7 @@
                                 <div class="media-body">
                                     <a><h3>PHP</h3></a>
                                     <h4>Okay</h4>
-                                    <p>In PHP I have made a Zodiac Calculator website that also shows you Zodiac information and years /w signs.</p>
+                                    <p>In PHP I have made a Zodiac Calculator website that also shows you Zodiac information and years.</p>
                                 </div>
                             </div>
                         </div>
@@ -258,7 +259,7 @@
                                 <div class="media-body">
                                     <a><h3>Express.js</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I have used Express.js to connect my Angular projects to my Node.js and MongoDB.</p>
+                                    <p>I have used Express.js to connect my Angular.js files to my Node.js and MongoDB databases.</p>
                                 </div>
                             </div>
                         </div>
@@ -280,9 +281,9 @@
                                     <img src="img/sql.png" height="140" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <a href="#"><h3>SQL (Oracle)</h3></a>
+                                    <a href="#"><h3>PLSQL</h3></a>
                                     <h4>Good</h4>
-                                    <p>I have queried a database using Oracle for a class, but not for personal database quering.</p>
+                                    <p>I have used PLSQL to query a class database that was prestructured, but I do not use it for personal database projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +295,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>SQL (MySQL)</h3></a>
                                     <h4>Great</h4>
-                                    <p>I use MySQL to pull and push data between my applications. It is currently my main database language.</p>
+                                    <p>I use MySQL to pull and push data between my applications files. It is currently my main database language.</p>
                                 </div>
                             </div>
                         </div>
@@ -327,7 +328,7 @@
                                 <div class="media-body">
                                     <a><h3>MySQL Workbench</h3></a>
                                     <h4>Great</h4>
-                                    <p>I used to use this to manage all the databases for Elias's different data storage. </p>
+                                    <p>I used to use this to manage databases for projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -351,7 +352,7 @@
                                 <div class="media-body">
                                     <a><h3>MongoDB</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I connected a to the database from my node.js but it was mostly done through command line. </p>
+                                    <p>With this I have connected and created databases through the command line process as well as the GUI. </p>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +364,7 @@
                                 <div class="media-body">
                                     <a><h3>MySql server</h3></a>
                                     <h4>Great</h4>
-                                    <p>I currently use this for my all database needs. </p>
+                                    <p>I currently use this to create my databases and their procedures. </p>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +376,7 @@
                                 <div class="media-body">
                                     <a><h3>Dreamweaver</h3></a>
                                     <h4>Good</h4>
-                                    <p>It's a simple drag and drop editor where you can make adjustment as you need throughout the code. </p>
+                                    <p>I created test websites using this. Once the design is decent I migrate it into another editor to do manually adjustment</p>
                                 </div>
                             </div>
                         </div>
@@ -387,7 +388,7 @@
                                 <div class="media-body">
                                     <a><h3>Notepad++</h3></a>
                                     <h4>Great</h4>
-                                    <p>I do not think this needs input really. </p>
+                                    <p>I use this to test sample JavaScript functions that I want to incorporate into my projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -399,31 +400,7 @@
                                 <div class="media-body">
                                     <a><h3>Visual Studio 2013-2017</h3></a>
                                     <h4>Definitely</h4>
-                                    <p>I do most of my programming experiments in Visual Studio. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 web front">
-                            <div class="media">
-                                <div class="media-left">
-                                    <img src="img/front-end.png" height="140" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <a><h3>Square Space</h3></a>
-                                    <h4>Okay</h4>
-                                    <p>I have worked with it but I cannot do much adjusting as I would like to in it. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 web front">
-                            <div class="media">
-                                <div class="media-left">
-                                    <img src="img/front-end.png" height="140" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <a><h3>GoDaddy web builder</h3></a>
-                                    <h4>Good</h4>
-                                    <p>This is the website I made with GoDaddy<a href="www.bridgecrosserssolutions.com">Bridge Crossers Solutions</a>. Note: The owner has made some unadvised adjustments. </p>
+                                    <p>I use Visual Studio's C# Asp.Net enviroment and Windows Forum to do most of my personal projects in.</p>
                                 </div>
                             </div>
                         </div>
@@ -435,7 +412,7 @@
                                 <div class="media-body">
                                     <a><h3>Eclipse Java Oxygen</h3></a>
                                     <h4>Good</h4>
-                                    <p>I am sure there is more to it than I came across in the 5-week class but so far, I have the basics of some of it. </p>
+                                    <p>In the Java SE enviroment I have created a standard calculator and other small application.</p>
                                 </div>
                             </div>
                         </div>
@@ -447,7 +424,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>Android Studio</h3></a>
                                     <h4>Good</h4>
-                                    <p>It a good tool for android development, but I would like to see how Xamarin does android development. </p>
+                                    <p>Using this I have created small applications like a photo gallery and things of that nature.</p>
                                 </div>
                             </div>
                         </div>
@@ -459,7 +436,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>Microsoft Office</h3></a>
                                     <h4>Great</h4>
-                                    <p> This includes: Word, PowerPoint, Excel, Access, and Visio</p>
+                                    <p> This includes: Word, PowerPoint, Excel, Access, and Visio. My main use for these is to disign in the flow of data in my programs.</p>
                                 </div>
                             </div>
                         </div>
@@ -471,7 +448,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>Azure</h3></a>
                                     <h4>Good</h4>
-                                    <p>I have played with Azure and managed to test out an auto population process for placeholders in it. </p>
+                                    <p>I have worked with Azure and managed to create an employee management web application. </p>
                                 </div>
                             </div>
                         </div>
