--- a/menu-list.html
+++ b/menu-list.html
@@ -209,8 +209,7 @@
                                 <div class="media-body">
                                     <a><h3>.NET C#</h3></a>
                                     <h4>Amazing</h4>
-                                    <p>In C# ASP.Net I have built games, websites, and most of my AIs and Elias Active Memory Information System
-					   (my personal take on AI processing and user interaction).
+                                    <p>In C# ASP.Net I have built games, websites, and most of my AIs and Elias Active Memory Information System.
 					</p>
                                 </div>
                             </div>
