--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                                 <div class="media-body">
                                     <a><h3>Critical Observer</h3></a>
                                     <h4>Great</h4>
-                                    <p>Sometimes looking beyound what is given allows me to get a better understanding of the issue.</p>
+                                    <p>Sometimes looking beyond what is given allows me to get a better understanding of the issue.</p>
                                 </div>
                             </div>
                         </div>
@@ -712,7 +712,7 @@
                                 <div class="media-body">
                                     <a><h3>Customer Service</h3></a>
                                     <h4>Great</h4>
-                                    <p>One of my mottos for dealing with difficult personalities is to just kill them with kindness and keep smiling.
+                                    <p>One of my motto's for dealing with difficult personalities is to just kill them with kindness and keep smiling.
                                     </p>
                                 </div>
                             </div>
